--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
  <meta charset="UTF-8">
 <title>\\我的槟城之旅</title>
-<link rel="stylesheet" type="text/css" href="mystyle.css">
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
