--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 <p>
 又称槟榔山，上到山顶，可以俯瞰整个槟城的风景。山上空气清新宜人，一望无际。
 </p>
-<img src="IMG2(1).jpg">
-<img src="IMG2（2.jpg">
+<img src="IMG2.jpg">
+<img src="IMG2（2).jpg">
 <h3>
 壁画街
 </h3>
