--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
 <p>
 当我们亲身来到这里时，看到这些艺术还是有些感慨。一面面已经斑驳泛黄的墙壁上，这些壁画也仿佛让我们感受到了当地特有的异国风情。
 </p>
-<img scr="IMG3.jpg">
+<img src="IMG3.jpg">
 <h3>
 猴子沙滩
 </h3>
 <p>
 未受到人类的破坏，依然处于原始状态。岛上的一些调皮可爱的猴子为海滩增添的生机与活力
 </p>
-<img scr="IMG4.jpg">
+<img src="IMG4.jpg">
 <h2>
 我最喜欢的三种美食
 </h2>
@@ -52,14 +52,14 @@
 <p>
 它是一道享誉全世界的小吃，具有美味可口，浓郁香脆的特点。
 </p>
-<img scr="IMG5.jpg">
+<img src="IMG5.jpg">
 <h3>
 印度炒面
 </h3>
 <p>
 是一道味道非常特别的面食
 </p>
-<img scr="IMG6.jpg">
+<img src="IMG6.jpg">
 <h3>
 咖喱饭
 </h3>
@@ -71,6 +71,6 @@
 <h3>
 在去日新独立中学之前，我担心会被同学冷落。但到了之后，我才发现我是胡思乱想，因为老师和同学对我特别热情。在我临走前，老师和同学们还为我准备了丰盛的饭菜，我很感动，也感受到了异国他乡的温暖。我爱我的老师和同学！
 </h3>
-<img scr="IMG7.jpg">
+<img src="IMG7.jpg">
 </body>
 <html>
